Revert "ERR-5026 -- GAC неактуален в 6.1 под Линукс"
This reverts commit 75989c7af2c0a2a437376b9a7a62cdc53275103b.

--- a/modules/Platform/pages/AssemblyResolver_CL.adoc
+++ b/modules/Platform/pages/AssemblyResolver_CL.adoc
@@ -35,7 +35,7 @@ public class AssemblyResolver
 
 == Заметки
 
-Функциональность, реализуемая классом `AssemblyResolver`, позволяет получать сущности из клиентских сборок {dv} без необходимости загрузки этих сборок в каталог программы и одну из папок на сервере с установленной программой {cns} (см. раздел "xref:install-linux::linux-limitations.adoc[]"), перечисленных в ветке реестра `{hklm-dv}Shared\Paths`. {wincl} должен быть установлен.
+Функциональность, реализуемую классом `AssemblyResolver`, позволяет получать сущности из клиентских сборок {dv} без необходимости загрузки этих сборок в каталог программы и GAC. {wincl} должен быть установлен.
 
 Метод в `StartResolve` подписывается на событие `AppDomain.CurrentDomain.AssemblyResolve` и при необходимости предоставляет сборки, размещенные в каталоге клиента {dv} и зарегистрированных каталогах.
 
