--- a/modules/bpms/pages/scenario-save.adoc
+++ b/modules/bpms/pages/scenario-save.adoc
@@ -46,7 +46,7 @@ namespace SampleCode
 . Выполните проверку корректности скрипта (кнопка *Компилировать*).
 . Если ошибок при компиляции не обнаружено, нажмите кнопку *Создать сборку*.
 +
-Система предложит выбрать место для сохранения библиотеки. Нужно учитывать, что итоговая сборка должна быть доступна сервису Workflow. Для этого её достаточно поместить в каталог приложения Workflow (исполняемый файл `ExecLogic.exe`), либо поместить в одну из папок на сервере с установленной программой {cns} (см. раздел "xref:install-linux::linux-limitations.adoc[]"), перечисленных в ветке реестра `{hklm-dv}\Shared\Paths`.
+Система предложит выбрать место для сохранения библиотеки. Нужно учитывать, что итоговая сборка должна быть доступна сервису Workflow. Для этого её достаточно поместить в каталог приложения Workflow (исполняемый файл `ExecLogic.exe`), либо зарегистрировать в GAC.
 +
 . Выполните сохранение, нажмите *OK*.
 +
