--- a/modules/external-storages/pages/storage-rule.adoc
+++ b/modules/external-storages/pages/storage-rule.adoc
@@ -152,11 +152,11 @@ image::ROOT:storage-rule-form.png[Пример формы настройки]
 +
 . Подписание сборки.
 +
-Разработанный компонент должен быть подписан. Это необходимо для формирования полного имени сборки и регистрации компонента.
+Разработанный компонент должен быть подписан. Это необходимо для формирования полного имени сборки и регистрации компонента в GAC.
 +
-. Регистрация компонента.
+. Регистрация компонента в GAC.
 +
-Собранный компонент, включающий основной класс и класс формы настройки, должен быть размещён в одной из папок на сервере с установленной программой {cns} (см. раздел "xref:install-linux::linux-limitations.adoc[]"), перечисленных в ветке реестра `{hklm-dv}\Shared\Paths`.
+Собранный компонент, включающий основной класс и класс формы настройки, должен быть зарегистрирован в GAC сервера {dv}. Для регистрации используйте `gacutil`.
 
 == Проверка
 
