--- a/modules/solutions/pages/control.adoc
+++ b/modules/solutions/pages/control.adoc
@@ -249,7 +249,7 @@ public sealed class ExtensionPackage : ControlExtensionInfoPackage
 * `HKEY_CURRENT_USER\Software\DocsVision\BackOffice\Client\PropertyControls` -- для текущего пользователя.
 * `{hklm}\Software\DocsVision\BackOffice\Client\PropertyControls` -- для всех пользователей.
 +
-В ветку требуется добавить строковый параметр, значение которого должно содержать полный путь к сборке, либо полное название класса, если сборка зарегистрированаfootnote:[Для регистрации сборку необходимо поместить в одну из папок на сервере с установленной программой {cns} (см. раздел "xref:install-linux::linux-limitations.adoc[]"), перечисленных в ветке реестра `{hklm-dv}\Shared\Paths`.].
+В ветку требуется добавить строковый параметр, значение которого должно содержать полный путь к сборке, либо полное название класса, если сборка зарегистрирована в GAC.
 +
 [WARNING]
 ====
