--- a/modules/external-storages/pages/load-storage-connector.adoc
+++ b/modules/external-storages/pages/load-storage-connector.adoc
@@ -1,11 +1,11 @@
 = Подключение провайдера к внешнему хранилищу к системе {dv}
 
 . Сборки с классом провайдера и классом графического интерфейса настройки должны быть подписаны. Допускается реализация класса провайдера и класса графического интерфейса в одной сборке.
-. Сборки должны быть скопированы в одну из папок на сервере с установленной программой {cns} (см. раздел "xref:install-linux::linux-limitations.adoc[]"), перечисленных в ветке реестра `{hklm-dv}Shared\Paths`.
+. Сборки должны быть загружены в GAC на сервере {dv}.
 
 [start=3]
 .Чтобы добавить новый тип хранилища в {dv} (должна использоваться редакция "Ecm"):
 . Откройте страницу настройки внешних хранилищ в Консоли настройки {dv}.
 . Нажмите кнопку добавления нового типа хранилища и выберите в списке _Тип_ пункт *_Добавить из сборки_*.
-. Выберите сборку с классом провайдера в папке из пункта 2 выше. В список _Тип_ будет добавлен новый пункт, соответствующий названию хранилища, указанному в `DisplayNameAttribute` класса хранилища.
+. Выберите сборку с классом провайдера (в папке GAC). В список _Тип_ будет добавлен новый пункт, соответствующий названию хранилища, указанному в `DisplayNameAttribute` класса хранилища.
 . Настройте хранилище, группу и правила помещения стандартным образом.
